--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <title>Quota Inc.</title>
 </head>
 
+<p>should b finished soon. (portfolio that i give ppl lol)</p>
+  
   <body>working on this :))</body>
 
   <html>
